# nlp_backend

./: Dockerfile  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 02db762918bb_init.py
nlp/: container.py  main.py
nlp/application/: errors.py
nlp/application/interactors/: __init__.py  project.py  tasks.py  user.py
nlp/application/interfaces/: __init__.py  publisher.py  uow.py
nlp/application/interfaces/repositories/: __init__.py  project.py  task.py  user.py
nlp/application/interfaces/services/: __init__.py  auth.py  password.py
nlp/domain/: errors.py  types.py
nlp/domain/entities/: __init__.py  project.py  task.py  user.py
nlp/infra/: configs.py  uow.py
nlp/infra/broker/: __init__.py  publisher.py
nlp/infra/db/tables/: __init__.py  base.py  project.py  tasks.py  users.py  users_projects.py
nlp/infra/repositories/: __init__.py  project.py  task.py  user.py
nlp/infra/services/: __init__.py  auth.py  password.py
nlp/interfaces/controllers/broker/: __init__.py  handling.py
nlp/interfaces/controllers/http/: __init__.py  project.py  task.py  user.py
nlp/interfaces/dtos/: project.py  task.py  user.py
