[project]
name = "nlp-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "TheAppleKingy",email = "pridanov.ali.job@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "email-validator (>=2.3.0,<3.0.0)",
    "faststream[rabbit] (>=0.6.7,<0.7.0)",
    "dishka (>=1.10.0,<2.0.0)",
    "fastapi (>=0.136.0,<0.137.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "pydantic (>=2.13.2,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "sqlalchemy-utils (>=0.42.1,<0.43.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "huawei"
url = "https://mirrors.huaweicloud.com/repository/pypi/simple/"
priority = "primary"